# Numerical-Integration-Using-CUDA

./: .gitignore  AbstractIntegralCalculator.h  CMakeLists.txt  LICENSE  README.md  main.cu
common/: FunctionFactory.cu  FunctionFactory.cuh  FunctionStrategy.cu  FunctionStrategy.cuh  IntegrationMethodFactory.cu  IntegrationMethodFactory.h  Kernels.cu  Kernels.cuh  Types.h  Utils.h
src/: AbstractIntegralCalculator.h  Constants.cuh
src/GaussianQuadrature/: GaussianQuadratureCUDA.cu  GaussianQuadratureCUDA.cuh  GaussianQuadratureKernel.cu  GaussianQuadratureKernel.cuh  GaussianQuadratureSequential.cu  GaussianQuadratureSequential.cuh
src/MonteCarloMethod/: MonteCarloKernel.cu  MonteCarloKernel.cuh  MonteCarloMethodCUDA.cu  MonteCarloMethodCUDA.cuh  MonteCarloMethodSequential.cu  MonteCarloMethodSequential.cuh
src/RectangleMethod/: RectangleKernel.cu  RectangleKernel.cuh  RectangleMethodCUDA.cu  RectangleMethodCUDA.h  RectangleMethodSequential.cu  RectangleMethodSequential.cuh
src/SimpsonIntegration/: SimpsonIntegration.cu  SimpsonIntegration.cuh  SimpsonIntegrationSequential.cu  SimpsonIntegrationSequential.cuh
src/TrapezoidMethod/: TrapezoidKernel.cu  TrapezoidKernel.cuh  TrapezoidMethodCUDA.cu  TrapezoidMethodCUDA.cuh  TrapezoidalKernel.cu  TrapezoidalKernel.cuh  TrapezoidalMethodCUDA.cu  TrapezoidalMethodCUDA.cuh  TrapezoidalMethodSequential.cu  TrapezoidalMethodSequential.cuh
src/tests/: efficiencyTest.cu  unitTests.cu  unitTests.cuh
tests/: efficiencyTest.cu  unitTests.cu  unitTests.cuh
